Make #<metric_id> scroll correctly to the metric (i.e. prevent the target metric from being overlapped by the menu bar).

--- a/components/frontend/src/App.css
+++ b/components/frontend/src/App.css
@@ -10,3 +10,7 @@
         margin-top: 0em;
     }
 }
+
+html {
+    scroll-padding-top: 70px; /* height of sticky header */
+}
